# paygo-enterprise

./: .gitignore  README.md  docker-compose.yml  index.html
German/: domain.cpp  domain.h  geo.cpp  geo.h  json.cpp  json.h  json_builder.cpp  json_builder.h  json_reader.cpp  json_reader.h  main.cpp  map_renderer.cpp  map_renderer.h  svg.cpp  svg.h  transport_catalogue.cpp  transport_catalogue.h
PayGo/: README.md  docker-compose.yml
PayGo/config/: terminal_config.json
PayGo/terminal/: CMakeLists.txt  requirements.txt
PayGo/web-service/backend/: Dockerfile  alembic.ini  card_tokenizer.py  config.py  database.py  main.py  payment_processor.py  requirements.txt  run.py  simple_main.py
PayGo/web-service/backend/models/: __init__.py  card.py  terminal.py  transaction.py  user.py
PayGo/web-service/backend/routers/: __init__.py  admin.py  auth.py  cards.py  terminals.py  transactions.py  users.py
PayGo/web-service/database/: init.sql
PayGo/web-service/frontend/: Dockerfile  index.html  package.json
Sql/: sql
config/: nginx.conf  prometheus.yml
docs/: API_DOCUMENTATION.md  DEVELOPMENT.md
scripts/: deploy.sh
terminal/: CMakeLists.txt
web-service/database/: init.sql
web-service/frontend/: Dockerfile  index.html  nginx.conf  package.json
web-service/frontend/src/: App.css  App.js
web-service/frontend/src/components/: Header.css  Header.js  Sidebar.css  Sidebar.js
web-service/frontend/src/context/: AuthContext.js
web-service/frontend/src/pages/: Cards.css  Cards.js  Dashboard.css  Dashboard.js  Login.css  Login.js  Profile.css  Profile.js  Support.css  Support.js
